[package]
name = "mukadat"
version = "0.1.0"
edition = "2024"
description = "r3data — a desktop tool for digitizing data points from plot images"
license = "MIT"

[dependencies]
dioxus = { version = "0.7.9", features = ["desktop"] }
image = { version = "0.25", features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kuva = { git = "https://github.com/Psy-Fer/kuva", version = "0.3.0", features = ["png"] }
base64 = "0.22"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.17"


